boolua_parser/src/snapshots/boolua_parser__tests__parse_and_verify_simple_expr.snap
---
source: src/parse/tests.rs
assertion_line: 18
expression: ast

---
Block {
    stmts: [
        Assignment(
            [
                Simple(
                    Name(
                        "x",
                    ),
                ),
            ],
            [
                Binary(
                    Prefix(
                        Var(
                            Simple(
                                Name(
                                    "a",
                                ),
                            ),
                        ),
                    ),
                    Add,
                    Binary(
                        Prefix(
                            Var(
                                Simple(
                                    Name(
                                        "b",
                                    ),
                                ),
                            ),
                        ),
                        Mul,
                        Prefix(
                            Var(
                                Simple(
                                    Name(
                                        "c",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ],
    ret: None,
}
