boolua_parser/src/snapshots/boolua_parser__tests__parse_and_verify_simple_if.snap
---
source: src/tests.rs
assertion_line: 17
expression: ast

---
Block {
    stmts: [
        If(
            True,
            Block {
                stmts: [
                    FnCall(
                        FnCall(
                            Var(
                                Simple(
                                    Name("print"),
                                ),
                            ),
                            None,
                            [
                                Str(
                                    "something",
                                ),
                            ],
                        ),
                    ),
                ],
                ret: None,
            },
            [],
            None,
        ),
    ],
    ret: None,
}
